2007-08-10  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Adam.

        <rdar://problem/5394449> Stop using some Carbon UI APIs for 64 bit

        Disable NPObject use in 64-bit on Mac OS X. Also generate the 64-bit export file.

        * Configurations/WebKit.xcconfig: Point to the generated 64-bit export file.
        * Plugins/WebBasePluginPackage.h:
        * Plugins/npfunctions.h: #ifdef out this header in 64-bit on Mac OS X.
        * WebKit.LP64.exp: Removed.
        * WebKit.xcodeproj/project.pbxproj: Generate the the 64-bit export file.
        * WebKitPrefix.h: Define WTF_USE_NPOBJECT.

2007-08-10  Anders Carlsson  <andersca@apple.com>

        Reviewed by Geoff.

        <rdar://problem/5390568>
        REGRESSION: –[WebFrame loadHTMLString:baseURL:] leaks the data source
        
        If the identifier is not in the map, just bail out instead of asserting. This is a better fix for
        <rdar://problem/5133420> because WebCore shouldn't have to worry about the lifetime of WebKit objects.
        
        * WebView/WebDocumentLoaderMac.mm:
        (WebDocumentLoaderMac::decreaseLoadCount):

2007-08-10  Oliver Hunt  <oliver@apple.com>

        Reviewed by Darin.

        Fixed <rdar://problem/5000470> REGRESSION: ATOK IM: reconvert returns incorrect symbol due to inconsistent range domains in TSM by working around <rdar://problem/5400551> [NSAttributedString(WebKitExtras) _web_attributedStringFromRange:] adds whitespace to the requested range

        We truncate the returned string to the expected length.

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView attributedSubstringFromRange:]):

2007-08-09  Mark Rowe  <mrowe@apple.com>

        Reviewed by Antti.

        <rdar://problem/5400709> Versioning in debug and release builds should include minor and tiny version before +

        * Configurations/Version.xcconfig:
        * WebKit.xcodeproj/project.pbxproj: Add a shell script phase to make to dependency between