@@ -1,5 +1,14 @@
 2007-08-10  Timothy Hatcher  <timothy@apple.com>
 
+        Reviewed by Mark Rowe.
+
+        <rdar://problem/5403302> HIWebView.h should be #ifdefed out for 64-bit
+
+        * Carbon/HIWebView.h: #ifdef out the header in 64-bit. Adds a comment about 32-bit only.
+        * Carbon/CarbonUtils.h: Ditto.
+
+2007-08-10  Timothy Hatcher  <timothy@apple.com>
+
         Reviewed by Adam.
 
         <rdar://problem/5394449> Stop using some Carbon UI APIs for 64 bit
